# Simulation-Game

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  test.py
src/physics_sim/: heat_equation_solver.py  keys.py  main.py  pde_solver.py  plot.py  timing.py
src/snapshot/: snapshot_s2.h5  snapshot_s3.h5  snapshot_s4.h5  snapshot_s5.h5  snapshot_s6.h5
